Added vm01 creation step

--- a/dev-kvm.yml
+++ b/dev-kvm.yml
@@ -5,4 +5,4 @@
   roles:
     - { role: common,               tags: [ 'common'  ] }
     - { role: kvm,               tags: [ 'kvm'  ] }
-    - { role: kvm,               tags: [ 'vdeploy'  ] }
+    - { role: kvm,               tags: [ 'vm_predeploy'  ] }
