--- a/roles/kvm/defaults/main.yml
+++ b/roles/kvm/defaults/main.yml
@@ -1,25 +1,18 @@
 ---
-# defaults file for kvm
+# defaults file for kvm  
+
     libvirt_folder: "/var/lib/libvirt/"
     image_pool_dir: "/var/lib/libvirt/"
     image_pool_name: "images"
     image_base_dir: "/var/lib/libvirt/images/"
-    image_base_name: "xenial-server-cloudimg-amd64-disk1"
-    image_custom_name: ubnt1604
-    image_base_url: "https://cloud-images.ubuntu.com/xenial/current/xenial-server-cloudimg-amd64-disk1.img"
+    image_base_name: "bionic-server-cloudimg-amd64.img"
+    image_custom_name: ubnt1804
+    vm_folders: ["{{ image_base_dir }}vm01/"]
+    vm_images: ["{{ image_base_dir }}vm01/{{ image_custom_name }}.qcow2"]
+    image_base_url: ["https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-amd64.img"]
     #change the uri to "qemu:///system" would execute the virt_pool module as a root even if the remote_user/become_user in ansible is set to a non root user.
     libvirt_uri: "qemu:///system"
     root_pass: "1"
-
-    #vm meta
-    guests:
-        test:
-          mem: 512
-          cpus: 1
-          os_type: ubnt
-          file_type: qcow2
-        test2:
-          mem: 512
-          cpus: 1
-          os_type: ubnt
-          file_type: qcow2
+    host01: "vm01"
+    host02: "vm02"
+    images: "images"
