--- a/roles/kvm/tasks/vm01_deploy.yml
+++ b/roles/kvm/tasks/vm01_deploy.yml
@@ -28,7 +28,7 @@
           virt-install 
           --name vm01
           --memory 1024 
-          --vcpus cores=1,threads=2 
+          --vcpus cores=2
           --boot hd,menu=on 
           --disk path=/var/lib/libvirt/images/vm01/{{image_custom_name}}-seed.qcow2,device=cdrom 
           --disk path=/var/lib/libvirt/images/snapshot-{{image_custom_name}}.qcow2,device=disk,size=5 
