--- a/roles/kvm/tasks/main.yml
+++ b/roles/kvm/tasks/main.yml
@@ -14,3 +14,8 @@
   import_tasks: vm01_deploy.yml
   tags:
     - vm01_deploy
+
+- name: vm02 deploy
+  import_tasks: vm02_deploy.yml
+  tags:
+    - vm02_deploy
