--- a/roles/kvm/defaults/main.yml
+++ b/roles/kvm/defaults/main.yml
@@ -11,7 +11,7 @@
     vm_images: ["{{ image_base_dir }}vm01/snapshot-{{ image_custom_name }}.qcow2","{{ image_base_dir }}vm02/snapshot-{{ image_custom_name }}.qcow2"]
     image_base_url: ["https://cloud-images.ubuntu.com/bionic/current/bionic-server-cloudimg-amd64.img"]
     libvirt_uri: "qemu:///system"
-    root_pass: "1"
+    root_pass: "{{ vault_root_pass }}"
     host01: "vm01"
     host02: "vm02"
     images: "images"
