--- a/dev-kvm.yml
+++ b/dev-kvm.yml
@@ -3,17 +3,22 @@
   remote_user: "{{ ansible_user }}"
   become: no
   roles:
-    - { role: common,               tags: [ 'common'  ] }
+    - { role: common,            tags: [ 'common'  ] }
     - { role: kvm,               tags: [ 'kvm'  ] }
     - { role: kvm,               tags: [ 'vm_predeploy'  ] }
+    - { role: loadbalancer,      tags: [ 'loadbalancer'  ] }
     - { role: kvm,               tags: [ 'vm01_deploy'  ] }
-    #- { role: kvm,               tags: [ 'vm02_deploy'  ] }
+    - { role: kvm,               tags: [ 'vm02_deploy'  ] }
 
 
 - hosts: vm01
   gather_facts: no
   remote_user: ubuntu
-  become: no
   roles:
     - { role: wp_deploy,               tags: [ 'vm01_wp_deploy'  ] }
-    #- { role: wp_deploy,               tags: [ 'vm02_wp_deploy'  ] }
+  
+- hosts: vm02
+  gather_facts: no
+  remote_user: ubuntu
+  roles:
+    - { role: wp_deploy,               tags: [ 'vm02_wp_deploy'  ] }
