--- a/roles/wp_deploy/tasks/vm01_wp_deploy.yml
+++ b/roles/wp_deploy/tasks/vm01_wp_deploy.yml
@@ -1,9 +1,20 @@
 #delay can be replaced with a smaller value for your situation
 - name: vm01 is starting... wait a sec... go get some coffee   
   wait_for:
+    delay: 
   #change this value for your case
-    timeout: 800
+    timeout: 10
     
+- name: Validating if the vm01 is UP and OPENED the PORT
+  wait_for:
+      host: vm01
+      port: 22
+      delay: 5
+      timeout: 10
+      state: started
+      msg: "WebServer PORT is not Listening"
+  ignore_errors: true
+
 - name: install on vm01 some packeges for docker (pip)
   become: true
   apt:
