change wait_for location to vm01/02_deploy

--- a/roles/kvm/tasks/debian.yml
+++ b/roles/kvm/tasks/debian.yml
@@ -23,6 +23,7 @@
       - qemu-system-x86
       - cpu-checker
       - virt-viewer
+      - python-lxml
     state: latest
     update_cache: yes
     cache_valid_time: 5400
